<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="157dp"
            android:layout_height="161dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031"
            app:srcCompat="@drawable/ic_oldtimer_motorcycle_mechanic"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/add_motorcycle"
            android:textColor="#767776"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/motoBrand"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="368dp"
            android:hint="@string/motorcycle_brand"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/motoModel"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:hint="@string/motorcycle_model"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoBrand"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/mileage"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:hint="@string/mileage"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoModel"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/vin"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:hint="@string/vehicle_identification_number"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mileage"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/addMotoBtn"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="612dp"

            android:text="Add to virtual garage"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
